--- a/package.json
+++ b/package.json
@@ -8,25 +8,32 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
+    "copy:assets": "cp -rv views/ dist/views",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "prestart": "npm run copy:assets",
     "start": "nest start",
+    "prestart:dev": "npm run copy:assets",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
+    "test:cypress": "npx cypress open",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@badeball/cypress-cucumber-preprocessor": "^10.0.2",
+    "@cypress/webpack-preprocessor": "^5.11.1",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^2.0.1",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/serve-static": "^2.2.2",
     "@types/dotenv": "^8.2.0",
-    "cypress": "^9.7.0",
     "dotenv": "^16.0.1",
     "hbs": "^4.2.0",
     "reflect-metadata": "^0.1.13",
@@ -43,6 +50,7 @@
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "cypress": "^9.7.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
