--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/serve-static": "^2.2.2",
+    "@nestjs/swagger": "^5.2.1",
     "@types/dotenv": "^8.2.0",
     "cache-manager": "^3.6.3",
     "class-transformer": "^0.5.1",
@@ -42,6 +43,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "swagger-ui-express": "^4.4.0",
     "valid-url": "^1.0.9"
   },
   "devDependencies": {
