--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -82,7 +82,8 @@ jobs:
     strategy:
       matrix:
         node-version: [ 16.x ]
-
+    env:
+      APP_PORT: 3000
     steps:
       - uses: actions/checkout@v2
 
