--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -1,10 +1,9 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
-    "noEmit": true,
     // be explicit about types included
     // to avoid clashing with Jest types
-    "types": ["cypress"]
+    "types": ["cypress"],
   },
   "include": [
     "../node_modules/cypress",
