--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/serve-static": "^2.2.2",
     "@nestjs/swagger": "^5.2.1",
+    "axios": "^0.27.2",
     "cache-manager": "^3.6.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
