Connect API to frontend
- Add matching E2E tests for success and error handling
- Known limitation to the client source code as the NestJS bundling process has issues with frontend asset bundling

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false
   },
-  "include": ["src/**/*.ts", "test/**/*.ts"],
-  "exclude": ["src/**/*.spec.ts", "test/"]
+  "include": ["src/**/*.ts", "test/**/*.ts", "client/*.ts"],
+  "exclude": ["src/**/*.spec.ts", "test/", "cypress/**/*"]
 }
