Added k6 scripts for performance testing under load
- Added E2E tests for more complicated urls
- Added console logs on the server to be able to debug issues seen during the load tests
- Fixed an issue which caused the cached urls to reset after 5 seconds, only become apparent with the load tests
- Added an error to the encode endpoint if the provided short code is already in the storage

--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,test}/**/*.ts\" --fix",
-    "test": "jest",
+    "test": "@test:unit && @test:e2e:ci",
+    "test:unit": "jest",
     "test:e2e": "npx cypress open",
     "test:e2e:ci": "cypress run --browser chrome --headless",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand"
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "load-test:all": "k6 run -d 30s -u 15 test/load-test-all.spec.ts",
+    "load-test:frontend": "k6 run test/load-test-frontend.spec.ts",
+    "load-test:decode": "k6 run test/load-test-decode.spec.ts"
   },
   "dependencies": {
     "@badeball/cypress-cucumber-preprocessor": "^10.0.2",
@@ -54,6 +58,7 @@
     "@types/cache-manager": "^3.4.3",
     "@types/express": "^4.17.13",
     "@types/jest": "27.4.1",
+    "@types/k6": "^0.37.0",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
@@ -63,6 +68,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.2.5",
+    "k6": "^0.0.0",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
