--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -72,7 +72,7 @@ jobs:
 
       - name: Tests
         run: |
-          npm run test
+          npm run test:unit
 
   test-e2e:
     name: Run E2E Tests
