--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,test}/**/*.ts\" --fix",
+    "lint": "eslint . --fix",
+    "sonar": "which sonar-scanner && sonar-scanner || true",
     "test": "@test:unit && @test:e2e:ci",
     "test:unit": "jest",
     "test:e2e": "npx cypress open",
